--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "multer": "^1.4.2",
     "next": "10.0.6",
+    "next-connect": "^0.10.0",
+    "pretty-bytes": "^5.5.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.15.1"
