--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.6.0",
     "multer": "^1.4.2",
     "next": "10.0.6",
     "next-connect": "^0.10.0",
