--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@google-cloud/storage": "^5.7.4",
+    "@material-ui/core": "^4.11.3",
+    "@types/multer": "^1.4.5",
     "axios": "^0.21.1",
+    "express": "^4.17.1",
     "file-saver": "^2.0.5",
+    "firebase": "^8.2.7",
+    "fs": "^0.0.1-security",
+    "js-file-download": "^0.4.12",
     "jszip": "^3.6.0",
     "multer": "^1.4.2",
     "next": "10.0.6",
